load("//config:custom_rules.bzl", "application")

application(
    infoplist = "Info.plist",
    deps = [
        "//Libraries/SwiftModuleWithoutTests:SwiftModuleWithoutTests",
        "//Libraries/SwiftModule:SwiftModule",
        "//Libraries/SwiftModuleWithPrebuiltDependency:SwiftModuleWithPrebuiltDependency",
    ],
)